--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ ul.table-of-contents li.logo a.active, ul.table-of-contents li.logo a:hover {
 } */
 
 ul.side-nav.fixed li.logo {
-  background-color: teal;
+  background-color: white;
   border-bottom: 1px solid #ddd;
   box-sizing: content-box;
   min-height: 90px;
